[package]
name = "pconcat"
description = """
Takes stdin commands split by new lines and executes them in parallel and
prints stdout in order based on the order they are in stdin.

Example:

$ pconcat <<'EOT'
sh -c 'printf foo; sleep 1'
printf bar
EOT

Will result in:
'foobar' (without quotes)
"""
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
tokio = { version = "1.20.1", features = ["macros", "fs", "io-std", "process", "rt-multi-thread"] }
futures = "0.3.21"
bytes = "1.2.0"
tokio-stream = { version = "0.1.9", features = ["io-util"] }
shlex = "1.1.0"
