[package]
name = "pconcat"
description = """
Takes stdin commands split by new lines and executes them in parallel and
prints stdout in order based on the order they are in stdin.

Example:

$ pconcat <<'EOT'
sh -c 'printf foo; sleep 1'
printf bar
EOT

Will result in:
'foobar' (without quotes)
"""
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
futures = "0.3.21"
shlex = "1.1.0"
async-std = "1.12.0"
memmap = "0.7.0"
